fixing font and adding byan

--- a/mystyle.css
+++ b/mystyle.css
@@ -1,7 +1,8 @@
 body {
   @charset "UTF-8";
   /* @import url("https://use.typekit.net/mdv5bbe.css"); */
-  font-family: ubuntu, serif;
+  @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
+  font-family: 'Ubuntu', sans-serif;
   font-size: 30px;
 
   div {
